--- a/index.html
+++ b/index.html
@@ -15,42 +15,30 @@
         <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css">
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<body>
+<!--[if lt IE 7]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
 
-        <div class="jumbotron">
-            <h1>Geomatikkdagene 2014</h1>
-            <h2>#Geomatikk | #gd14NO</h2>
+<div class="jumbotron">
+    <h1>Geomatikkdagene 2014</h1>
+    <h2>#Geomatikk | #gd14NO</h2>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <a class="twitter-timeline" data-dnt="true" data-chrome="nofooter transparent noheader" href="https://twitter.com/search?q=%23geomatikk+OR+%23gd14NO" data-widget-id="304521028044988416">Tweets about "#geomatikk OR #gd14NO"</a>
+
         </div>
-
-        <div class="row">
-            <div class="col-md-6">
-
-
-<a class="twitter-timeline" data-dnt="true" data-chrome="nofooter transparent noheader" href="https://twitter.com/search?q=%23geomatikk+OR+%23gd14NO" data-widget-id="304521028044988416">Tweets about "#geomatikk OR #gd14NO"</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-            </div>
-            <div class="col-md-6">
-
-
+        <div class="col-md-6">
             <iframe src='http://www.slideflickr.com/iframe/Mwa3SQqw' width='500' height='500' frameborder='0'></iframe>
-            </div>
-
         </div>
 
-
-
-
-
-<!--
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
--->
-        <script src="js/main.js"></script>
-    </body>
+    </div>
+</div>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<script src="js/main.js"></script>
+</body>
 </html>
