change header text a bit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="jumbotron">
     <h1>Geomatikkdagene 2014</h1>
-    <h2>#Geomatikk | #gd14NO</h2>
+    <h2>#gd14NO / #Geomatikk</h2>
 </div>
 
 <div class="container-fluid">
